Example, documentation and other minor improvements

--- a/examples/conf.ini
+++ b/examples/conf.ini
@@ -86,13 +86,16 @@ METHODS_OPNE = python -m openne --method node2vec --graph-format edgelist --epoc
 TUNE_PARAMS_OPNE =
 
 [OTHER METHODS]
-NAMES_OTHER = prune metapath2vec
+NAMES_OTHER = prune
+#             metapath2vec
 METHODS_OTHER = python ../methods/PRUNE/src/main.py --inputgraph {} --output {} --dimension {}
-                ../methods/metapath2vec/metapath2vec -negative 5 -min-count 1 -iter 20 -samples 100 -threads 8 -train {} -output {} -size {}
+#                ../methods/metapath2vec/metapath2vec -negative 5 -min-count 1 -iter 20 -samples 100 -threads 8 -train {} -output {} -size {}
 # Example metapath2vec: -negative 1 5 10
 TUNE_PARAMS_OTHER =
-INPUT_DELIM_OTHER = '\s' '\s'
-OUTPUT_DELIM_OTHER = ',' '\s'
+INPUT_DELIM_OTHER = '\s'
+#                   '\s'
+OUTPUT_DELIM_OTHER = ','
+#                    '\s'
 
 [REPORT]
 # Options: {'auroc', 'f_score', 'precision', 'recall', 'accuracy', 'fallout', 'miss'}
