--- a/examples/node2vec/conf_node2vec.ini
+++ b/examples/node2vec/conf_node2vec.ini
@@ -42,7 +42,7 @@ LP_BASELINES = common_neighbours
 NEIGHBOURHOOD = in out
 
 [OPENNE METHODS]
-NAMES_OPNE = node2vec, deepWalk, line
+NAMES_OPNE = node2vec deepWalk line
 METHODS_OPNE = python -m openne --method node2vec --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
                python -m openne --method deepWalk --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
                python -m openne --method line --epochs 100
@@ -50,6 +50,7 @@ TUNE_PARAMS_OPNE = --p 0.25 0.5 1 2 4 --q 0.25 0.5 1 2 4
 
 [OTHER METHODS]
 NAMES_OTHER =
+EMBTYPE_OTHER =
 METHODS_OTHER =
 TUNE_PARAMS_OTHER =
 INPUT_DELIM_OTHER =
