--- a/examples/conf.ini
+++ b/examples/conf.ini
@@ -4,6 +4,7 @@
 # If the variable is not needed it can be left blank (the = sign is required) or set to None
 # Options which are lists of elements must be separated by any type of white space or new line
 # All options in the NETWORKS section are required to have the same number of entries and in the same order
+# Relative paths are always taken w.r.t. the EvalNE main folder
 
 # The METHODS and TUNE_PARAMETERS options must be in the same order (first line in tune is assumed to refer
 # to the first line in the methods field)
@@ -22,7 +23,7 @@
 EDGE_EMBEDDING_METHODS = average hadamard
 # Options: {'LogisticRegression'}
 LP_MODEL = LogisticRegression
-EXP_REPEATS = 1
+EXP_REPEATS = 2
 EMBED_DIM = 128
 VERBOSE = True
 
@@ -88,6 +89,10 @@ TUNE_PARAMS_OPNE =
 [OTHER METHODS]
 NAMES_OTHER = prune
 #             metapath2vec
+# The type of embeding method: node, edge or end to end
+# Options: {'ne', 'ee', 'e2e'}
+EMBTYPE_OTHER = ne
+#                ne
 METHODS_OTHER = python ../methods/PRUNE/src/main.py --inputgraph {} --output {} --dimension {}
 #                ../methods/metapath2vec/metapath2vec -negative 5 -min-count 1 -iter 20 -samples 100 -threads 8 -train {} -output {} -size {}
 # Example metapath2vec: -negative 1 5 10
