--- a/examples/node2vec/conf_node2vec.ini
+++ b/examples/node2vec/conf_node2vec.ini
@@ -1,11 +1,14 @@
 ; conf.ini
 
+# Conf file which replicates the experimental section of the node2vec paper.
+
 [GENERAL]
 EDGE_EMBEDDING_METHODS = average hadamard weighted_l1 weighted_l2
 LP_MODEL = LogisticRegression
-EXP_REPEATS = 10
+EXP_REPEATS = 1
 EMBED_DIM = 128
 VERBOSE = True
+SEED = None
 
 [NETWORKS]
 NAMES = Facebook PPI ArXiv
@@ -17,7 +20,7 @@ OUTPATHS = ../output/Facebook/
            ../output/Astro-Ph/
 DIRECTED = False False False
 SEPARATORS = '\s' ',' '\t'
-COMMENTS = '#' '#' ';'
+COMMENTS = '#' '#' '#'
 
 [PREPROCESSING]
 RELABEL = True
@@ -29,10 +32,10 @@ DELIMITER = ','
 [TRAINTEST]
 TRAIN_FRAC = 0.5
 FAST_SPLIT = True
-OWA = True
+OWA = False
 NUM_FE_TRAIN = None
 NUM_FE_TEST = None
-TRAINTEST_PATH = train_test_splits/
+TRAINTEST_PATH =
 
 [BASELINES]
 LP_BASELINES = common_neighbours
@@ -42,22 +45,29 @@ LP_BASELINES = common_neighbours
 NEIGHBOURHOOD = in out
 
 [OPENNE METHODS]
-NAMES_OPNE = node2vec deepWalk line
-METHODS_OPNE = python -m openne --method node2vec --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
-               python -m openne --method deepWalk --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
-               python -m openne --method line --epochs 100
-TUNE_PARAMS_OPNE = --p 0.25 0.5 1 2 4 --q 0.25 0.5 1 2 4
+NAMES_OPNE =
+# node2vec deepWalk line
+METHODS_OPNE =
+# python -m openne --method node2vec --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
+# python -m openne --method deepWalk --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
+# python -m openne --method line --epochs 100 --order 2
+TUNE_PARAMS_OPNE =
+# --p 0.25 0.5 1 2 4 --q 0.25 0.5 1 2 4
 
 [OTHER METHODS]
-NAMES_OTHER =
-EMBTYPE_OTHER =
-METHODS_OTHER =
-TUNE_PARAMS_OTHER =
-INPUT_DELIM_OTHER =
-OUTPUT_DELIM_OTHER =
+NAMES_OTHER = node2vec deepWalk line
+EMBTYPE_OTHER = ne ne ne
+WRITE_WEIGHTS_OTHER = False False True
+WRITE_DIR_OTHER = True True True
+METHODS_OTHER = python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 1
+                deepwalk --input {} --output {} --representation-size {} --format 'edgelist' --walk-length 80 --number-walks 10 --window-size 10 --workers 1
+                ../methods/LINE/linux/line -train {} -output {} -size {} -order 2 -samples 100 -negative 5 -rho 0.025 -threads 1
+TUNE_PARAMS_OTHER = --p 0.25 0.5 1 2 4 --q 0.25 0.5 1 2 4
+INPUT_DELIM_OTHER = '\s' '\s' '\s'
+OUTPUT_DELIM_OTHER = '\s' '\s' '\s'
 
 [REPORT]
 MAXIMIZE = auroc
-SCORES = %(maximize)s
+SCORES = all
 CURVES =
 PRECATK_VALS =
