--- a/examples/cne/conf_cne.ini
+++ b/examples/cne/conf_cne.ini
@@ -3,12 +3,16 @@
 # Conf file which replicates the experimental section of the CNE paper.
 
 [GENERAL]
+TASK = lp
+LP_NUM_EDGE_SPLITS = 3
+NC_NUM_NODE_SPLITS =
+NC_NODE_FRACS =
+NR_EDGE_SAMP_FRAC =
 EDGE_EMBEDDING_METHODS = hadamard
-LP_MODEL = LogisticRegression
-EXP_REPEATS = 3
+LP_MODEL = LogisticRegressionCV
 EMBED_DIM = 128
 VERBOSE = True
-SEED = None
+SEED = 42
 
 [NETWORKS]
 NAMES = Facebook PPI ArXiv BlogCatalog Wikipedia StudentDB
@@ -18,30 +22,24 @@ INPATHS = ../data/Facebook/facebook_combined.txt
           ../data/BlogCatalog/blog.edgelist
           ../data/Wiki/wiki.edgelist
           ../data/StudentDB/studentdb.edgelist
-OUTPATHS = ../output/Facebook/
-           ../output/PPI/
-           ../output/Astro-Ph/
-           ../output/BlogCatalog/
-           ../output/Wiki/
-           ../output/StudentDB/
-DIRECTED = False False False False False False
+DIRECTED = False
 SEPARATORS = '\s' ',' '\t' ',' ',' ','
 COMMENTS = '#' '#' '#' '#' '#' '#'
+LABELPATHS =
 
 [PREPROCESSING]
 RELABEL = True
 DEL_SELFLOOPS = True
-PREP_NW_NAME = prep_graph.edgelist
+SAVE_PREP_NW = False
 WRITE_STATS = True
 DELIMITER = ','
 
-[TRAINTEST]
-TRAIN_FRAC = 0.5
-FAST_SPLIT = True
+[EDGESPLIT]
+TRAINTEST_FRAC = 0.5
+TRAINVALID_FRAC = 0.9
+SPLIT_ALG = spanning_tree
 OWA = False
-NUM_FE_TRAIN = None
-NUM_FE_TEST = None
-TRAINTEST_PATH =
+FE_RATIO = 1
 
 [BASELINES]
 LP_BASELINES = common_neighbours
@@ -63,13 +61,13 @@ TUNE_PARAMS_OPNE =
 #--p 0.25 0.5 1 2 4 --q 0.25 0.5 1 2 4
 
 [OTHER METHODS]
-NAMES_OTHER = node2vec deepWalk line metapath2vec CNE_d8_degree CNE_d8_uniform CNE_d16_degree CNE_d16_uniform
+NAMES_OTHER = node2vec deepWalk line metapath2vec CNE_d8_uniform CNE_d8_degree CNE_d16_uniform CNE_d16_degree
 EMBTYPE_OTHER = ne ne ne ne e2e e2e e2e e2e
 WRITE_WEIGHTS_OTHER = False False True False False False False False
 WRITE_DIR_OTHER = False False True False True True True True
 # By default EvalNE autofills the dimension parameter. If a different values is needed, the same parameter can be passed
 # to the method again. The later value is the one used by the method. This hack only works for e2e methods
-METHODS_OTHER = python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 1
+METHODS_OTHER = python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 4
                 deepwalk --input {} --output {} --representation-size {} --format 'edgelist' --walk-length 40 --window-size 5 --workers 1
                 ../methods/LINE/linux/line -train {} -output {} -size {} -order 2 -samples 100 -negative 5 -rho 0.025 -threads 1
                 ../methods/metapath2vec/metapath2vec -min-count 1 -iter 500 -negative 10 -threads 1 -train {} -output {} -size {}
