--- a/examples/conf.ini
+++ b/examples/conf.ini
@@ -8,6 +8,9 @@
 # All options in the NETWORKS section are required to have the same number of entries and in the same order
 # Relative paths are always taken w.r.t. the EvalNE main folder
 
+# A different conf file is required for each type of networks: directed and undirected.
+# Weighted graphs are not yet supported
+
 # The METHODS and TUNE_PARAMETERS options must be in the same order (first line in tune is assumed to refer
 # to the first line in the methods field)
 
@@ -16,16 +19,33 @@
 
 
 [GENERAL]
+# TASK: the task to evaluate i.e. link prediction, network reconstruction of node (multi-label) classification
+# Options: {'lp', 'nr', 'nc'}
+TASK = lp
+
+# LP_NUM_EDGE_SPLITS: the number of repetitions of LP experiment with different train/test edge splits
+# Required if task is `lp`.
+LP_NUM_EDGE_SPLITS = 2
+
+# NC_NUM_NODE_SPLITS: the number of repetitions of NC experiment with different train/test node splits
+# Required if task is `nc`.
+NC_NUM_NODE_SPLITS =
+
+# NC_NODE_FRACS: the fractions of train labels to use when evaluating node classification.
+# Required if task is `nc`.
+NC_NODE_FRACS = 0.1 0.5 0.9
+
+# NR_EDGE_SAMP_FRAC: the fraction of all possible edges in a graph G to sample and evaluate for netwrok reconstruction
+# Required if task is `nr`.
+NR_EDGE_SAMP_FRAC = 0.1
+
 # EDGE_EMBEDDING_METHODS: the edge embedding methods to be used.
 # Options: {'average', 'hadamard', 'weighted_l1', 'weighted_l2'}
-EDGE_EMBEDDING_METHODS = average hadamard
+EDGE_EMBEDDING_METHODS = average hadamard weighted_l1 weighted_l2
 
 # LP_MODEL: the binary classifier which will predict links from edge embeddings.
 # Options: {'LogisticRegression'}
-LP_MODEL = LogisticRegression
-
-# EXP_REPEATS: the number of experiment repeats.
-EXP_REPEATS = 1
+LP_MODEL = LogisticRegressionCV
 
 # EMBED_DIM: the dimensions of the embedding.
 EMBED_DIM = 128
@@ -35,32 +55,29 @@ VERBOSE = True
 
 # SEED: the random sees to be used in the experiments. If None the system time will be used.
 # Options: {'', 'None', any_int}
-SEED = 0
+SEED = 42
 
 [NETWORKS]
 # NAMES: the names of the networks to be evaluated.
-NAMES = StudentDB
-        GR-QC
+NAMES = StudentDB FB GR-QC
 
 # INPATHS: the paths to the files containing the networks. The system will check if these files exist before execution.
 INPATHS = ../data/StudentDB/studentdb.edgelist
+          ../data/Facebook/facebook_combined.txt
           ../data/GR-QC/CA-GrQc.txt
 
-# OUTPATHS: the output paths where the results (e.g. train test splits, prep graphs...) will be stored.
-OUTPATHS = ../output/StudentDB/
-           ../output/GR-QC/
-
-# DIRECTED: indicates if the networks are directed.
+# DIRECTED: indicates if the networks are directed or not.
 DIRECTED = False
-           False
 
 # SEPARATORS: indicates the separator used in the provided network file. Whitespaces required as: '\s' '\t' or '\n'
-SEPARATORS = ','
-             '\t'
+SEPARATORS = ',' '\s' '\t'
 
 # COMMENTS: the character determining that a line is a comment inthe newtork file.
-COMMENTS = '#'
-           '#'
+COMMENTS = '#' '#' '#'
+
+# LABELPATHS: the path where the node label files can be found
+# Required if task is `nc`.
+LABELPATHS =
 
 [PREPROCESSING]
 # RELABEL: relabel or not the network nodes to 0...N (required for methods such as PRUNE)
@@ -69,44 +86,43 @@ RELABEL = True
 # DEL_SELFLOOPS: delete or not self loops in the network.
 DEL_SELFLOOPS = True
 
-# PREP_NW_NAME: name under which the preprocessed graph should be stored. If blank prep graphs will not be stored.
-PREP_NW_NAME = prep_graph.edgelist
+# SAVE_PREP_NW: indicates if the preprocessed graph should be stored.
+SAVE_PREP_NW = False
 
-# WRITE_STATS: write or not common graph statistics as header in the PREP_NW_NAME file.
+# WRITE_STATS: write or not common graph statistics as header in the preprocessed network file.
 WRITE_STATS = True
 
 # DELIMITER: delimiter that whould be used when writing the preprocessed graph to a file.
 DELIMITER = ','
 
-[TRAINTEST]
-# TRAIN_FRAC: fraction of the total edges which will be used for training. The rest are used for testing.
-TRAIN_FRAC = 0.5
+[EDGESPLIT]
+# TRAINTEST_FRAC: fraction of the total edges which will be used for training. The rest are used for testing.
+TRAINTEST_FRAC = 0.8
 
-# FAST_SPLIT: determines if the fast edge split method (True) or the naive (False) should be used.
-FAST_SPLIT = True
+# TRAINVALID_FRAC: fraction of train edges which will be further used as training. The rest are used for validation.
+TRAINVALID_FRAC = 0.9
+
+# SPLIT_ALG: determines the algorithm which will be used to perform the train test split.
+# Options: {'spanning_tree', 'random', 'naive', 'fast'}
+SPLIT_ALG = spanning_tree
 
 # OWA: deretmines if the open world (True) or the closed world assumtion (False) for non-edges should be used.
 OWA = True
 
-# NUM_FE_TRAIN: the number of train non-edges. If None the same number as train real edges will be used.
-NUM_FE_TRAIN = None
-
-# NUM_FE_TEST: the number of test non-edges. If None the same number as test real edges will be used.
-NUM_FE_TEST = None
-
-# TRAINTEST_PATH: path where the train test splits will be stored. If left blank splits will not be stored.
-TRAINTEST_PATH = train_test_splits/
+# FE_RATIO: ratio of false to true graph edges for tr & te. The num_fe = fe_ratio * num_edges
+FE_RATIO = 1
 
 [BASELINES]
 # LP_BASELINES: the link prediction heuristics to evaluate
 # Options: {'', 'random_prediction', 'common_neighbours', 'jaccard_coefficient', 'adamic_adar_index',
-# 'preferential_attachment', 'resource_allocation_index'}
+# 'preferential_attachment', 'resource_allocation_index', 'katz'}
 LP_BASELINES = random_prediction
                common_neighbours
                jaccard_coefficient
                adamic_adar_index
                preferential_attachment
                resource_allocation_index
+               katz 0.01
 
 # NEIGHBOURHOOD: for directed graphs indicates if the in or the out neighbourhood should be used.
 # Options are: {'', 'in', 'out'}
@@ -115,18 +131,19 @@ NEIGHBOURHOOD = in out
 [OPENNE METHODS]
 # NAMES_OPNE: the names of methods from OpenNE to be evaluated. In the same order as METHODS_OPNE.
 # Options: {'node2vec', 'deepWalk', 'line', 'grarep', 'sdne', 'hope', 'lap', 'gf'}
-NAMES_OPNE = node2vec
+NAMES_OPNE = node2vec lap-opne hope-opne
 
 # METHODS_OPNE: the command line call to perform in order to evaluate each method.
 # Note 1: the --directed parameter for OpenNE is not required, EvalNE will automatically send the corect input edgelist
 # Note 2: the --graph-format does not need to be specified, EvalNE will set it automatically
 METHODS_OPNE = python -m openne --method node2vec --graph-format edgelist --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
+               python -m openne --method lap --epochs 100
+               python -m openne --method hope --epochs 100
+#               python -m openne --method gf --epochs 100
+#               python -m openne --method sdne --epochs 100 --encoder-list [1024,128] --beta 5 --bs 500
 #               python -m openne --method deepWalk --graph-format edgelist --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
 #               python -m openne --method line --graph-format edgelist --epochs 10
 #               python -m openne --method grarep --epochs 100
-#               python -m openne --method sdne --epochs 100
-#               python -m openne --method hope --epochs 100
-#               python -m openne --method lap --epochs 100
 
 # TUNE_PARAMS_OPNE: the paremeters of methods from OpenNE to be tuned by the library.
 # Example: tunning the p and q parameters for node2vec: --p 0.25 0.5 1 2 --q 0.25 0.5 1 2
@@ -135,37 +152,33 @@ TUNE_PARAMS_OPNE =
 
 [OTHER METHODS]
 # NAMES_OTHER: the names of methods NOT from OpenNE to be evaluated. In the same order as METHODS_OTHER.
-NAMES_OTHER = prune
-#             metapath2vec
+NAMES_OTHER = wys verse mnmf struc2vec
 
 # EMBTYPE_OTHER: the type of embeding method: node, edge or end to end
 # Options: {'ne', 'ee', 'e2e'}
-EMBTYPE_OTHER = ne
-#                ne
+EMBTYPE_OTHER = ne ne ne ne
 
 # WRITE_WEIGHTS_OTHER: sets if train graph should be given as input to methods weighted (True) or unweighted (False)
-WRITE_WEIGHTS_OTHER = False
-#                      False
+WRITE_WEIGHTS_OTHER = False False False False
 
 # WRITE_DIR_OTHER: sets is training graph should be given as input to methods with both edge dir. (True) or one (False)
-WRITE_DIR_OTHER = True
-#                False
+WRITE_DIR_OTHER = True True True True
 
 # METHODS_OTHER: the command line call to perform in order to evaluate each method.
-METHODS_OTHER = python ../methods/PRUNE/src/main.py --inputgraph {} --output {} --dimension {}
-#                ../methods/metapath2vec/metapath2vec -negative 5 -min-count 1 -iter 20 -samples 100 -threads 8 -train {} -output {} -size {}
+METHODS_OTHER = ../methods/wys/venv/bin/python3 ../methods/wys/src/main.py --edge-path {} --embedding-path {} --dimensions {} --attention-path /dev/null --epochs 200 --window-size 5 --learning-rate 0.01 --beta 0.5 --gamma 0.5 --num-of-walks 80
+                python ../methods/verse/python/main.py --input {} --output {} --dimension {} --undirected --alpha 0.85 --nsamples 3 --threads 4
+                ../methods/M-NMF-py/venv/bin/python ../methods/M-NMF-py/src/main.py --input {} --embedding-output {} --dimensions {} --assignment-output /dev/null --log-output /dev/null --cluster-mean-output /dev/null --dump-matrices False
+                python ../methods/struc2vec/src/main.py --input {} --output {} --dimensions {} --num-walks 20 --walk-length 80 --window-size 5 --OPT1 True --OPT2 True --OPT3 True --until-layer 6
 
 # TUNE_PARAMS_OTHER: the paremeters of methods NOT from OpenNE to be tuned by the library.
 # Example: tunning the number of negative samples for metapath2vec: -negative 1 5 10
 TUNE_PARAMS_OTHER =
 
 # INPUT_DELIM_OTHER: delimiter for the input network expected by each of the methods.
-INPUT_DELIM_OTHER = '\s'
-#                    '\s'
+INPUT_DELIM_OTHER = ',' ',' ',' '\s'
 
 # OUTPUT_DELIM_OTHER: delimiter used in the output file (node embedding, edge embedding, predictions) by each method.
-OUTPUT_DELIM_OTHER = ','
-#                    '\s'
+OUTPUT_DELIM_OTHER = ',' ',' ',' '\s'
 
 [REPORT]
 # MAXIMIZE: the score to maximize when performing model validation.
@@ -179,7 +192,7 @@ SCORES = %(maximize)s
 
 # CURVES: the curves to provide as output.
 # Options are: {'', 'roc', 'pr', 'all'}
-CURVES =
+CURVES = roc
 
 # PRECATK_VALS: the values of k for which to provide the precision at k
 PRECATK_VALS = 2 10 100 200 500 800 1000 10000 100000
