--- a/examples/prune/conf_prune.ini
+++ b/examples/prune/conf_prune.ini
@@ -3,49 +3,48 @@
 # Conf file which replicates the experimental section of the PRUNE paper.
 
 [GENERAL]
+TASK = lp
+LP_NUM_EDGE_SPLITS = 3
+NC_NUM_NODE_SPLITS =
+NC_NODE_FRACS =
+NR_EDGE_SAMP_FRAC =
 # The EE method used in the paper is not mentioned, we will use:
 EDGE_EMBEDDING_METHODS = average hadamard
 LP_MODEL = LogisticRegression
 # The experiment repeats are not mentioned. We will use 3:
-EXP_REPEATS = 3
 EMBED_DIM = 128
 VERBOSE = True
-SEED = None
+SEED = 42
 
 [NETWORKS]
 NAMES = HepPh
         FbWallPost
-#        Webspam
+        Webspam
 INPATHS = ../data/cit-HepPh/Cit-HepPh.txt
           ../data/Facebook-wallposts/prep_graph.edgelist
-#          ../data/Webspam/prep_graph.edgelist
-OUTPATHS = ../output/cit-HepPh/
-           ../output/Facebook-wallposts/
-#           ../output/Webspam/
+          ../data/Webspam/prep_graph.edgelist
 DIRECTED = True
-           True
-#           True
 SEPARATORS = '\t'
              ','
-#             ','
+             ','
 COMMENTS = '#'
            '#'
-#           '#'
+           '#'
+LABELPATHS =
 
 [PREPROCESSING]
 RELABEL = True
 DEL_SELFLOOPS = True
-PREP_NW_NAME = prep_graph.edgelist
+SAVE_PREP_NW = False
 WRITE_STATS = True
 DELIMITER = ','
 
-[TRAINTEST]
-TRAIN_FRAC = 0.8
-FAST_SPLIT = True
+[EDGESPLIT]
+TRAINTEST_FRAC = 0.8
+TRAINVALID_FRAC = 0.9
+SPLIT_ALG = spanning_tree
 OWA = False
-NUM_FE_TRAIN = None
-NUM_FE_TEST = None
-TRAINTEST_PATH =
+FE_RATIO = 1
 
 [BASELINES]
 LP_BASELINES =
@@ -61,7 +60,7 @@ NAMES_OTHER = node2vec deepWalk line prune
 EMBTYPE_OTHER = ne ne ne ne
 WRITE_WEIGHTS_OTHER = False False True False
 WRITE_DIR_OTHER = False False True True
-METHODS_OTHER = python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --workers 1
+METHODS_OTHER = python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --workers 8
                 deepwalk --input {} --output {} --representation-size {} --format 'edgelist' --workers 1
                 ../methods/LINE/linux/line -train {} -output {} -size {} -order 2 -samples 100 -negative 5 -rho 0.025 -threads 8
                 python ../methods/PRUNE/src/main.py --lamb 0.01 --epoch 50 --inputgraph {} --output {} --dimension {}
