--- a/examples/sdne/conf_sdne.ini
+++ b/examples/sdne/conf_sdne.ini
@@ -3,35 +3,38 @@
 # Conf file which replicates the experimental section of the SDNE paper.
 
 [GENERAL]
+TASK = lp
+LP_NUM_EDGE_SPLITS = 3
+NC_NUM_NODE_SPLITS =
+NC_NODE_FRACS =
+NR_EDGE_SAMP_FRAC =
 EDGE_EMBEDDING_METHODS = hadamard
 LP_MODEL = LogisticRegression
-EXP_REPEATS = 3
 EMBED_DIM = 100
 VERBOSE = True
-SEED = None
+SEED = 42
 
 [NETWORKS]
 NAMES = GR-QC
 INPATHS = ../data/GR-QC/CA-GrQc.txt
-OUTPATHS = ../output/GR-QC/
 DIRECTED = True
 SEPARATORS = '\t'
 COMMENTS = '#'
+LABELPATHS =
 
 [PREPROCESSING]
 RELABEL = True
 DEL_SELFLOOPS = True
-PREP_NW_NAME = prep_graph.edgelist
+SAVE_PREP_NW = False
 WRITE_STATS = True
 DELIMITER = ','
 
-[TRAINTEST]
-TRAIN_FRAC = 0.85
-FAST_SPLIT = True
+[EDGESPLIT]
+TRAINTEST_FRAC = 0.85
+TRAINVALID_FRAC = 0.9
+SPLIT_ALG = spanning_tree
 OWA = False
-NUM_FE_TRAIN = None
-NUM_FE_TEST = 5000000
-TRAINTEST_PATH =
+FE_RATIO = 166.6
 
 [BASELINES]
 LP_BASELINES = common_neighbours
@@ -62,3 +65,4 @@ MAXIMIZE = precision
 SCORES = all
 CURVES =
 PRECATK_VALS = 2 10 100 200 300 500 800 1000 10000
+
