--- a/examples/node2vec/conf_node2vec.ini
+++ b/examples/node2vec/conf_node2vec.ini
@@ -3,39 +3,41 @@
 # Conf file which replicates the experimental section of the node2vec paper.
 
 [GENERAL]
-EDGE_EMBEDDING_METHODS = average hadamard weighted_l1 weighted_l2
+TASK = lp
+LP_NUM_EDGE_SPLITS = 3
+NC_NUM_NODE_SPLITS =
+NC_NODE_FRACS =
+NR_EDGE_SAMP_FRAC =
+# Run once for each ee method: average hadamard weighted_l1 weighted_l2
+EDGE_EMBEDDING_METHODS = average
 LP_MODEL = LogisticRegression
-EXP_REPEATS = 1
 EMBED_DIM = 128
 VERBOSE = True
-SEED = None
+SEED = 42
 
 [NETWORKS]
 NAMES = Facebook PPI ArXiv
 INPATHS = ../data/Facebook/facebook_combined.txt
           ../data/PPI/ppi.edgelist
           ../data/Astro-PH/CA-AstroPh.txt
-OUTPATHS = ../output/Facebook/
-           ../output/PPI/
-           ../output/Astro-Ph/
-DIRECTED = False False False
+DIRECTED = False
 SEPARATORS = '\s' ',' '\t'
 COMMENTS = '#' '#' '#'
+LABELPATHS =
 
 [PREPROCESSING]
 RELABEL = True
 DEL_SELFLOOPS = True
-PREP_NW_NAME = prep_graph.edgelist
+SAVE_PREP_NW = False
 WRITE_STATS = True
 DELIMITER = ','
 
-[TRAINTEST]
-TRAIN_FRAC = 0.5
-FAST_SPLIT = True
+[EDGESPLIT]
+TRAINTEST_FRAC = 0.5
+TRAINVALID_FRAC = 0.9
+SPLIT_ALG = spanning_tree
 OWA = False
-NUM_FE_TRAIN = None
-NUM_FE_TEST = None
-TRAINTEST_PATH =
+FE_RATIO = 1
 
 [BASELINES]
 LP_BASELINES = common_neighbours
@@ -46,21 +48,16 @@ NEIGHBOURHOOD = in out
 
 [OPENNE METHODS]
 NAMES_OPNE =
-# node2vec deepWalk line
 METHODS_OPNE =
-# python -m openne --method node2vec --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
-# python -m openne --method deepWalk --epochs 100 --number-walks 10 --walk-length 80 --window-size 10
-# python -m openne --method line --epochs 100 --order 2
 TUNE_PARAMS_OPNE =
-# --p 0.25 0.5 1 2 4 --q 0.25 0.5 1 2 4
 
 [OTHER METHODS]
 NAMES_OTHER = node2vec deepWalk line
 EMBTYPE_OTHER = ne ne ne
 WRITE_WEIGHTS_OTHER = False False True
 WRITE_DIR_OTHER = True True True
-METHODS_OTHER = python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 1
-                deepwalk --input {} --output {} --representation-size {} --format 'edgelist' --walk-length 80 --number-walks 10 --window-size 10 --workers 1
+METHODS_OTHER = python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 8
+                python ../methods/node2vec/main.py --input {} --output {} --dimensions {} --walk-length 80 --num-walks 10 --window-size 10 --workers 8 --p 1 --q 1
                 ../methods/LINE/linux/line -train {} -output {} -size {} -order 2 -samples 100 -negative 5 -rho 0.025 -threads 1
 TUNE_PARAMS_OTHER = --p 0.25 0.5 1 2 4 --q 0.25 0.5 1 2 4
 INPUT_DELIM_OTHER = '\s' '\s' '\s'
