--- a/examples/others/conf_parTest.ini
+++ b/examples/others/conf_parTest.ini
@@ -3,9 +3,13 @@
 # Conf file which showcases the difference in accuracy for metapath2vec when using different levels of parallelism.
 
 [GENERAL]
+TASK = lp
+LP_NUM_EDGE_SPLITS = 5
+NC_NUM_NODE_SPLITS =
+NC_NODE_FRACS =
+NR_EDGE_SAMP_FRAC =
 EDGE_EMBEDDING_METHODS = average hadamard weighted_l1 weighted_l2
 LP_MODEL = LogisticRegression
-EXP_REPEATS = 5
 EMBED_DIM = 128
 VERBOSE = True
 SEED = None
@@ -15,27 +19,24 @@ NAMES = Facebook PPI ArXiv
 INPATHS = ../data/Facebook/facebook_combined.txt
           ../data/PPI/ppi.edgelist
           ../data/Astro-PH/CA-AstroPh.txt
-OUTPATHS = ../output/Facebook/
-           ../output/PPI/
-           ../output/Astro-Ph/
-DIRECTED = False False False
+DIRECTED = False
 SEPARATORS = '\s' ',' '\t'
 COMMENTS = '#' '#' '#'
+LABELPATHS =
 
 [PREPROCESSING]
 RELABEL = True
 DEL_SELFLOOPS = True
-PREP_NW_NAME = prep_graph.edgelist
+SAVE_PREP_NW = False
 WRITE_STATS = True
 DELIMITER = ','
 
-[TRAINTEST]
-TRAIN_FRAC = 0.5
-FAST_SPLIT = True
+[EDGESPLIT]
+TRAINTEST_FRAC = 0.5
+TRAINVALID_FRAC = 0.9
+SPLIT_ALG = spanning_tree
 OWA = True
-NUM_FE_TRAIN = None
-NUM_FE_TEST = None
-TRAINTEST_PATH =
+FE_RATIO = 1
 
 [BASELINES]
 LP_BASELINES =
