--- a/examples/conf.ini
+++ b/examples/conf.ini
@@ -182,7 +182,8 @@ OUTPUT_DELIM_OTHER = ',' ',' ',' '\s'
 
 [REPORT]
 # MAXIMIZE: the score to maximize when performing model validation.
-# Options: {'auroc', 'f_score', 'precision', 'recall', 'accuracy', 'fallout', 'miss'}
+# LP and NR Options: {'auroc', 'f_score', 'precision', 'recall', 'accuracy', 'fallout', 'miss'}
+# NC Options: {'f1_micro', 'f1_macro', 'f1_weighted'}
 MAXIMIZE = auroc
 
 # SCORES: the score that will be reported in the output file. If '%(maximize)s' the output will be tabular Alg.\Network
