--- a/examples/conf.ini
+++ b/examples/conf.ini
@@ -44,11 +44,16 @@ NR_EDGE_SAMP_FRAC = 0.1
 EDGE_EMBEDDING_METHODS = average hadamard weighted_l1 weighted_l2
 
 # LP_MODEL: the binary classifier which will predict links from edge embeddings.
-# Options: {'LogisticRegression'}
+# Options: Kewords: {'LogisticRegression', 'LogisticRegressionCV'}
+# Options: Any sklearn clasifier e.g.: `sklearn.ensamble.ExtraTreesClassifier()` or
+# `sklearn.svm.LinearSVC(C=1.0, kernel=’rbf’, degree=3)`
 LP_MODEL = LogisticRegressionCV
 
 # EMBED_DIM: the dimensions of the embedding.
 EMBED_DIM = 128
+
+# TIMEOUT: the maximum execution time in seconds (or None) for each method including param tuning.
+TIMEOUT = 1800
 
 # VERBOSE: verbosity level of the execution.
 VERBOSE = True
