--- a/examples/node2vec/conf_node2vec.ini
+++ b/examples/node2vec/conf_node2vec.ini
@@ -12,6 +12,7 @@ NR_EDGE_SAMP_FRAC =
 EDGE_EMBEDDING_METHODS = average
 LP_MODEL = LogisticRegression
 EMBED_DIM = 128
+TIMEOUT = None
 VERBOSE = True
 SEED = 42
 
