--- a/examples/others/conf_opennetest.ini
+++ b/examples/others/conf_opennetest.ini
@@ -11,6 +11,7 @@ NR_EDGE_SAMP_FRAC =
 EDGE_EMBEDDING_METHODS = average hadamard weighted_l1 weighted_l2
 LP_MODEL = LogisticRegression
 EMBED_DIM = 128
+TIMEOUT = None
 VERBOSE = True
 SEED = 0
 
