--- a/examples/prune/conf_prune.ini
+++ b/examples/prune/conf_prune.ini
@@ -13,6 +13,7 @@ EDGE_EMBEDDING_METHODS = average hadamard
 LP_MODEL = LogisticRegression
 # The experiment repeats are not mentioned. We will use 3:
 EMBED_DIM = 128
+TIMEOUT = None
 VERBOSE = True
 SEED = 42
 
