--- a/examples/sdne/conf_sdne.ini
+++ b/examples/sdne/conf_sdne.ini
@@ -11,6 +11,7 @@ NR_EDGE_SAMP_FRAC =
 EDGE_EMBEDDING_METHODS = hadamard
 LP_MODEL = LogisticRegression
 EMBED_DIM = 100
+TIMEOUT = None
 VERBOSE = True
 SEED = 42
 
