--- a/examples/cne/conf_cne.ini
+++ b/examples/cne/conf_cne.ini
@@ -11,6 +11,7 @@ NR_EDGE_SAMP_FRAC =
 EDGE_EMBEDDING_METHODS = hadamard
 LP_MODEL = LogisticRegressionCV
 EMBED_DIM = 128
+TIMEOUT = None
 VERBOSE = True
 SEED = 42
 
