--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-matplotlib
-numpy==1.15.1
-scipy
-networkx>=2.2
+numpy==1.15.4
+scipy==0.19.1
+networkx==2.2
 scikit-learn==0.19.0
 tqdm
-pandas
+pandas==0.24.2
+matplotlib==2.2.4
